Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15987

Debugger: QC crashes on exit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 4.0.0-rc1
    • Qt Creator 4.0.0-rc1
    • Debugger
    • Ubuntu 12.04 32bit, QC 4.0 based on Qt5.5
    • 40b6413201ac5b6f53fd4508085f760585b0d742 05c5ed285984e648774cfe544fec6ea833876ce5

    Description

      Steps to reproduce:

      • open/create simple project
      • place a bp, start debugging
      • when stopped at the bp, close QC

      Current result:

      • QC crashes on exit

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes